edited to use Local Storage API

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>31-Day Countdown with Precise Time</title>
+    <title>31-Day Countdown with Local Storage Notes</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <h1>31-Day Countdown with Precise Time</h1>
+    <h1>31-Day Countdown with Local Storage Notes</h1>
     <div id="currentDate"></div>
     <div id="currentTime"></div>
     <div id="countdown"></div>
@@ -59,7 +59,6 @@
         <h3>Notes for <span id="selectedDate"></span></h3>
         <textarea id="noteInput"></textarea>
         <button onclick="saveNote()">Save Note</button>
-        <button onclick="loadNote()">Load Note</button>
     </div>
 
     <script>
@@ -109,7 +108,32 @@
             setInterval(updateTime, 1000); // Update time every second
         }
 
-        // ... rest of the code remains the same ...
+        function selectDay(index, dayNumber) {
+            selectedDay = index;
+            const today = new Date();
+            const selectedDate = new Date(today.getFullYear(), today.getMonth(), today.getDate() + index);
+            document.getElementById('selectedDate').textContent = selectedDate.toDateString();
+            
+            // Remove previous selection
+            document.querySelectorAll('.cell').forEach(cell => cell.classList.remove('selected'));
+            // Add selection to clicked cell
+            document.querySelectorAll('.cell')[index].classList.add('selected');
+
+            // Load note for the selected day
+            const note = localStorage.getItem(`note_${dayNumber}`);
+            document.getElementById('noteInput').value = note || '';
+        }
+
+        function saveNote() {
+            if (selectedDay !== null) {
+                const note = document.getElementById('noteInput').value;
+                const dayNumber = parseInt(document.querySelectorAll('.cell')[selectedDay].textContent);
+                localStorage.setItem(`note_${dayNumber}`, note);
+                alert('Note saved successfully!');
+            } else {
+                alert('Please select a day first.');
+            }
+        }
 
         // Call updateGrid when the page loads
         window.onload = updateGrid;
