--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             flex-direction: column;
             align-items: center;
             padding: 20px;
+            background-color: #FFF7D8;
         }
         #grid {
             display: grid;
